@@ -1158,6 +1158,22 @@ operator|.
 name|currentTimeMillis
 argument_list|()
 decl_stmt|;
+if|if
+condition|(
+name|ss
+operator|.
+name|getIsVerbose
+argument_list|()
+condition|)
+block|{
+name|out
+operator|.
+name|println
+argument_list|(
+name|cmd
+argument_list|)
+expr_stmt|;
+block|}
 name|ret
 operator|=
 name|qp
@@ -1433,6 +1449,31 @@ block|}
 block|}
 else|else
 block|{
+if|if
+condition|(
+name|ss
+operator|.
+name|getIsVerbose
+argument_list|()
+condition|)
+block|{
+name|ss
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+name|tokens
+index|[
+literal|0
+index|]
+operator|+
+literal|" "
+operator|+
+name|cmd_1
+argument_list|)
+expr_stmt|;
+block|}
 name|ret
 operator|=
 name|proc
